--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <title>Projectdocumentatie - Week 1</title>
+  <title>Projectdocumentatie - Lost in Tra(i)nslation</title>
 </head>
 <body>
-  <h1>Week 1 - Lost in Tra(i)nslation</h1>
-  <p>Hier beschrijf ik mijn eerste beslissingen en ideeën rond het project.</p>
+  <h1>Projectdocumentatie</h1>
+  <p>Welkom! Op deze site hou ik mijn evolutie bij voor het project <strong>Lost in Tra(i)nslation</strong>.</p>
+
+  <h2>Overzicht per week</h2>
+  <ul>
+    <li><a href="week1.html">Week 1 – Start & eerste ideeën</a></li>
+    <li><a href="week2.html">Week 2 – Structuur & planning</a></li>
+    <li><a href="week3.html">Week 3 – Verbeteringen & keuzes</a></li>
+  </ul>
+
+  <p><em>Laatste update: november 2025</em></p>
 </body>
 </html>
