--- a/index.html
+++ b/index.html
@@ -2,19 +2,36 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <title>Projectdocumentatie - Lost in Tra(i)nslation</title>
+  <title>Projectdocs – Lost in Tra(i)nslation</title>
 </head>
 <body>
-  <h1>Projectdocumentatie</h1>
-  <p>Welkom! Op deze site hou ik mijn evolutie bij voor het project <strong>Lost in Tra(i)nslation</strong>.</p>
+  <!-- Hoofdtitel van de site -->
+  <h1>Projectdocumentatie – Lost in Tra(i)nslation</h1>
 
-  <h2>Overzicht per week</h2>
+  <!-- Navigatie staat op elke pagina hetzelfde -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Overzicht</a></li>
+      <li><a href="week1.html">Week 1 – Start</a></li>
+      <li><a href="week2.html">Week 2 – Structuur & info</a></li>
+      <li><a href="week3.html">Week 3 – Verbeteringen</a></li>
+      <!-- later: <li><a href="week4.html">Week 4</a></li> -->
+    </ul>
+  </nav>
+
+  <!-- Korte uitleg voor de leerkracht -->
+  <h2>Doel van deze documentatie</h2>
+  <p>Op deze website beschrijf ik per week mijn evolutie en de beslissingen die ik heb genomen tijdens het uitwerken van de opdracht <strong>“Lost in Tra(i)nslation”</strong>.</p>
+
+  <h2>Pagina’s</h2>
   <ul>
-    <li><a href="week1.html">Week 1 – Start & eerste ideeën</a></li>
-    <li><a href="week2.html">Week 2 – Structuur & planning</a></li>
-    <li><a href="week3.html">Week 3 – Verbeteringen & keuzes</a></li>
+    <li><a href="week1.html">Week 1 – eerste analyse en idee</a></li>
+    <li><a href="week2.html">Week 2 – structuur, navigatie en opdeling</a></li>
+    <li><a href="week3.html">Week 3 – iteratie en bijsturing</a></li>
   </ul>
 
-  <p><em>Laatste update: november 2025</em></p>
+  <!-- opdracht-informatie -->
+  <h2>Opdrachtinfo</h2>
+  <p>Deze documentatie hoort bij het vak <em>Prototyping Tools</em>, week 5: HTML &amp; CSS – typografie, kleur en ruimte. Momenteel gebruik ik alleen HTML, zonder afbeeldingen en zonder CSS, zoals in de opdracht staat.</p>
 </body>
 </html>
