--- a/week1.html
+++ b/week1.html
@@ -5,10 +5,30 @@
   <title>Week 1 – Lost in Tra(i)nslation</title>
 </head>
 <body>
-  <h1>Week 1 – Lost in Tra(i)nslation</h1>
+  <!-- Navigatie (dezelfde als op index) -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Overzicht</a></li>
+      <li><a href="week1.html">Week 1 – Start</a></li>
+      <li><a href="week2.html">Week 2 – Structuur & info</a></li>
+      <li><a href="week3.html">Week 3 – Verbeteringen</a></li>
+    </ul>
+  </nav>
 
-  <p>In deze eerste week heb ik nagedacht over de opdracht en het concept. 
-     Ik heb beslist om te werken rond het thema communicatie tussen mens en machine.</p>
+  <h1>Week 1 – Start van het project</h1>
+
+  <h2>Wat was de opdracht?</h2>
+  <p>Ik moest een project uitwerken rond “Lost in Tra(i)nslation”. Voor mij gaat dit over misverstanden in communicatie, vooral als informatie moet doorgegeven worden van de ene naar de andere persoon of van mens naar machine.</p>
+
+  <h2>Wat heb ik beslist in week 1?</h2>
+  <ul>
+    <li>Ik maak een documentatiewebsite met meerdere HTML-pagina’s (één per week).</li>
+    <li>Ik gebruik voorlopig alleen HTML, geen afbeeldingen en geen CSS.</li>
+    <li>Ik hou per week bij welke keuzes ik heb gemaakt en waarom.</li>
+  </ul>
+
+  <h2>Waarom deze keuzes?</h2>
+  <p>Door alles in HTML te schrijven, zie ik duidelijk de structuur van mijn pagina’s. Later kan ik dan makkelijk kleur, typografie en ruimte toevoegen met CSS, zoals in de les is uitgelegd.</p>
 
   <p><a href="index.html">← Terug naar overzicht</a></p>
 </body>
