--- a/index.html
+++ b/index.html
@@ -2,36 +2,40 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <title>Projectdocs – Lost in Tra(i)nslation</title>
+  <title>Projectdocumentatie – Lost in Tra(i)nslation</title>
 </head>
 <body>
-  <!-- Hoofdtitel van de site -->
-  <h1>Projectdocumentatie – Lost in Tra(i)nslation</h1>
-
-  <!-- Navigatie staat op elke pagina hetzelfde -->
+  <!-- Navigatie die op elke pagina hetzelfde blijft -->
   <nav>
     <ul>
       <li><a href="index.html">Overzicht</a></li>
       <li><a href="week1.html">Week 1 – Start</a></li>
-      <li><a href="week2.html">Week 2 – Structuur & info</a></li>
+      <li><a href="week2.html">Week 2 – Structuur</a></li>
       <li><a href="week3.html">Week 3 – Verbeteringen</a></li>
-      <!-- later: <li><a href="week4.html">Week 4</a></li> -->
     </ul>
   </nav>
 
-  <!-- Korte uitleg voor de leerkracht -->
-  <h2>Doel van deze documentatie</h2>
-  <p>Op deze website beschrijf ik per week mijn evolutie en de beslissingen die ik heb genomen tijdens het uitwerken van de opdracht <strong>“Lost in Tra(i)nslation”</strong>.</p>
+  <!-- Titel van het project -->
+  <h1>Projectdocumentatie – Lost in Tra(i)nslation</h1>
 
-  <h2>Pagina’s</h2>
+  <!-- Korte beschrijving van de opdracht -->
+  <p>Op deze website hou ik mijn evolutie en beslissingen bij voor het project
+     <strong>Lost in Tra(i)nslation</strong> binnen het vak <em>Prototyping Tools</em>.</p>
+
+  <!-- Overzicht van de weken -->
+  <h2>Overzicht per week</h2>
   <ul>
-    <li><a href="week1.html">Week 1 – eerste analyse en idee</a></li>
-    <li><a href="week2.html">Week 2 – structuur, navigatie en opdeling</a></li>
-    <li><a href="week3.html">Week 3 – iteratie en bijsturing</a></li>
+    <li><a href="week1.html">Week 1 – Start en idee</a></li>
+    <li><a href="week2.html">Week 2 – Structuur & navigatie</a></li>
+    <li><a href="week3.html">Week 3 – Verbeteringen</a></li>
   </ul>
 
-  <!-- opdracht-informatie -->
-  <h2>Opdrachtinfo</h2>
-  <p>Deze documentatie hoort bij het vak <em>Prototyping Tools</em>, week 5: HTML &amp; CSS – typografie, kleur en ruimte. Momenteel gebruik ik alleen HTML, zonder afbeeldingen en zonder CSS, zoals in de opdracht staat.</p>
+  <!-- Korte toelichting over de huidige fase -->
+  <h2>Opdrachtfase</h2>
+  <p>De opdracht voor week 5 vraagt om enkel tekst in HTML te gebruiken, zonder CSS of afbeeldingen.
+     Later voeg ik typografie, kleur en ruimte toe via een apart CSS-bestand.</p>
+
+  <hr>
+  <p><em>Opdracht: HTML & CSS – Typografie, Kleur en Ruimte (week 5)</em></p>
 </body>
 </html>
