--- a/week1.html
+++ b/week1.html
@@ -5,31 +5,41 @@
   <title>Week 1 – Lost in Tra(i)nslation</title>
 </head>
 <body>
-  <!-- Navigatie (dezelfde als op index) -->
+  <!-- Navigatie, op elke pagina identiek -->
   <nav>
     <ul>
       <li><a href="index.html">Overzicht</a></li>
       <li><a href="week1.html">Week 1 – Start</a></li>
-      <li><a href="week2.html">Week 2 – Structuur & info</a></li>
+      <li><a href="week2.html">Week 2 – Structuur</a></li>
       <li><a href="week3.html">Week 3 – Verbeteringen</a></li>
     </ul>
   </nav>
 
+  <!-- Titel van deze week -->
   <h1>Week 1 – Start van het project</h1>
 
+  <!-- Beschrijving van de opdracht en eigen interpretatie -->
   <h2>Wat was de opdracht?</h2>
-  <p>Ik moest een project uitwerken rond “Lost in Tra(i)nslation”. Voor mij gaat dit over misverstanden in communicatie, vooral als informatie moet doorgegeven worden van de ene naar de andere persoon of van mens naar machine.</p>
+  <p>De opdracht <strong>Lost in Tra(i)nslation</strong> draait rond communicatie en interpretatie.
+     Ik zie het als een oefening in het vertalen van ideeën naar een begrijpbare vorm, zowel inhoudelijk als visueel.</p>
 
-  <h2>Wat heb ik beslist in week 1?</h2>
+  <!-- Beslissingen van deze week -->
+  <h2>Wat heb ik deze week gedaan?</h2>
   <ul>
-    <li>Ik maak een documentatiewebsite met meerdere HTML-pagina’s (één per week).</li>
-    <li>Ik gebruik voorlopig alleen HTML, geen afbeeldingen en geen CSS.</li>
-    <li>Ik hou per week bij welke keuzes ik heb gemaakt en waarom.</li>
+    <li>GitHub-account aangemaakt en repository <code>projectdocs</code> opgezet.</li>
+    <li>Basis HTML-pagina gemaakt met enkel tekst, zonder CSS.</li>
+    <li>Navigatie toegevoegd zodat ik later eenvoudig nieuwe weken kan koppelen.</li>
   </ul>
 
+  <!-- Motivatie en reflectie -->
   <h2>Waarom deze keuzes?</h2>
-  <p>Door alles in HTML te schrijven, zie ik duidelijk de structuur van mijn pagina’s. Later kan ik dan makkelijk kleur, typografie en ruimte toevoegen met CSS, zoals in de les is uitgelegd.</p>
+  <p>Ik wilde de structuur eerst goed begrijpen voor ik opmaak toevoeg.
+     Zo blijft mijn code overzichtelijk en weet ik precies wat elk deel doet.</p>
 
+  <!-- Teruglink naar overzicht -->
   <p><a href="index.html">← Terug naar overzicht</a></p>
+
+  <!-- Korte interne opmerking -->
+  <!-- Volgende stap: week2.html dupliceren en navigatie controleren -->
 </body>
 </html>
